--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ table {
 
 
 /* Float the last column in a row to the right, because of different browser behavior with rounding */
-[class*="column"] + [class*="column"]:last-child { float: right; }
+/*[class*="column"] + [class*="column"]:last-child { float: right; }*/
 /* Make an exception and float left */
 [class*="column"] + [class*="column"].end { float: left; }
 
@@ -126,8 +126,13 @@ i { font-style: italic; }
 
 
 a {
-  color: #000;
+  opacity: 0.7;
+  color: #ED2505;
   text-decoration: none;
+}
+
+a:hover {
+  opacity: 1;
 }
 
 
@@ -168,14 +173,14 @@ a {
 
 .header {
   padding-top: 30px;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 600;
+  padding-bottom: 30px;
 }
 
 .header .subtitle {
-  font-size: 15px;
-  font-style: italic;
-  color: #555;
+  font-size: 14px;
+  font-weight: normal;
 }
 
 
@@ -189,18 +194,23 @@ a {
 }
 
 .menu .menu-item {
-  color: #666;
+  /*color: #666;*/
   margin-right: 20px;
 }
 
 .menu .menu-item.active {
-  color: #000;
+  /*color: #000;*/
 }
 
 /* 
   Work section
   =======================================
 */
+
+
+.work .project {
+  display: block;
+}
 
 .work .project .caption {
   overflow: hidden;
